# role-radar

./: .env.example  .gitignore  README.md  preferences.yaml  pyproject.toml  run-scrape.bat  start-ui.bat
data/: ai_companies.yaml  portfolios.csv
src/role_radar/: __init__.py  config.py  cv_parser.py  dedupe.py  emailer.py  main.py  models.py  reporting.py  salary_estimator.py  scoring.py  storage.py
src/role_radar/company_sources/: __init__.py  ai_top20.py  top_vcs.py  vc_portfolios.py
src/role_radar/connectors/: __init__.py  ashby.py  base.py  generic_html.py  greenhouse.py  lever.py  registry.py  smartrecruiters.py
src/role_radar/templates/: email.html  email.txt
src/role_radar/utils/: __init__.py  http.py  logging.py
src/role_radar/web/: __init__.py  app.py
src/role_radar/web/templates/: index.html
tests/: __init__.py  test_connectors.py  test_cv_parser.py  test_dedupe.py  test_scoring.py
